--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -19,135 +19,104 @@
 
     <!-- uncomment the line below to enable PWA  -->
     <!-- <link rel="manifest" href="manifest.json" /> -->
-
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="pwa/apple-icon-180.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="167x167"
-      href="pwa/apple-icon-167.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="152x152"
-      href="pwa/apple-icon-152.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="120x120"
-      href="pwa/apple-icon-120.png"
-    />
-
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-
-    <link
-      rel="apple-touch-startup-image"
-      href="pwa/apple-splash-2048-2732.png"
-      media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
-    />
-    <link
-      rel="apple-touch-startup-image"
-      href="pwa/apple-splash-2732-2048.png"
-      media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
-    />
-    <link
-      rel="apple-touch-startup-image"
-      href="pwa/apple-splash-1668-2388.png"
-      media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
-    />
-    <link
-      rel="apple-touch-startup-image"
-      href="pwa/apple-splash-2388-1668.png"
-      media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
-    />
-    <link
-      rel="apple-touch-startup-image"
-      href="pwa/apple-splash-1668-2224.png"
-      media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
-    />
-    <link
-      rel="apple-touch-startup-image"
-      href="pwa/apple-splash-2224-1668.png"
-      media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
-    />
-    <link
-      rel="apple-touch-startup-image"
-      href="pwa/apple-splash-1536-2048.png"
-      media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
-    />
-    <link
-      rel="apple-touch-startup-image"
-      href="pwa/apple-splash-2048-1536.png"
-      media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
-    />
-    <link
-      rel="apple-touch-startup-image"
-      href="pwa/apple-splash-1242-2688.png"
-      media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
-    />
-    <link
-      rel="apple-touch-startup-image"
-      href="pwa/apple-splash-2688-1242.png"
-      media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
-    />
-    <link
-      rel="apple-touch-startup-image"
-      href="pwa/apple-splash-1125-2436.png"
-      media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
-    />
-    <link
-      rel="apple-touch-startup-image"
-      href="pwa/apple-splash-2436-1125.png"
-      media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
-    />
-    <link
-      rel="apple-touch-startup-image"
-      href="pwa/apple-splash-828-1792.png"
-      media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
-    />
-    <link
-      rel="apple-touch-startup-image"
-      href="pwa/apple-splash-1792-828.png"
-      media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
-    />
-    <link
-      rel="apple-touch-startup-image"
-      href="pwa/apple-splash-1242-2208.png"
-      media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
-    />
-    <link
-      rel="apple-touch-startup-image"
-      href="pwa/apple-splash-2208-1242.png"
-      media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
-    />
-    <link
-      rel="apple-touch-startup-image"
-      href="pwa/apple-splash-750-1334.png"
-      media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
-    />
-    <link
-      rel="apple-touch-startup-image"
-      href="pwa/apple-splash-1334-750.png"
-      media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
-    />
-    <link
-      rel="apple-touch-startup-image"
-      href="pwa/apple-splash-640-1136.png"
-      media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
-    />
-    <link
-      rel="apple-touch-startup-image"
-      href="pwa/apple-splash-1136-640.png"
-      media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
-    />
   </head>
   <body>
-    <div class="hello">
-      <img class="hello__logo" src="../assets/img/logo.svg" alt="WTF " />
-      <span class="hello__circles"></span>
-    </div>
+    <main class="main">
+      <header class="header"><h1 class="header__content"></h1></header>
+      <section class="section section--clicker">
+        <h2 class="section__h2"></h2>
+        <div class="section__coin">
+          <button class="section__button section__button--clicker"></button>
+        </div>
+        <p class="section__paragraph"></p>
+        <h3 class="section__h3"></h3>
+      </section>
+      <section class="section section--city">
+        <h2 class="section__h2"></h2>
+        <img class="section__image section__image--city" />
+        <div class="section__container section__container--city">
+          <h3 class="section__h3"></h3>
+          <p class="section__paragraph"></p>
+        </div>
+      </section>
+      <section class="section section--units">
+        <h2 class="section__h2"></h2>
+        <article class="section__article">
+          <h3 class="section__h3"></h3>
+          <img class="section__image section__image--units" />
+          <p class="section__paragraph"></p>
+          <button class="section__button section__button--peasant"></button>
+          <p class="section__paragraph"></p>
+          <p class="section__paragraph"></p>
+        </article>
+        <article class="section__article">
+          <h3 class="section__h3"></h3>
+          <img class="section__image section__image--units" />
+          <p class="section__paragraph"></p>
+          <button class="section__button section__button--merceneary"></button>
+          <p class="section__paragraph"></p>
+          <p class="section__paragraph"></p>
+        </article>
+        <article class="section__article">
+          <h3 class="section__h3"></h3>
+          <img class="section__image section__image--units" />
+          <p class="section__paragraph"></p>
+          <button class="section__button section__button--priest"></button>
+          <p class="section__paragraph"></p>
+          <p class="section__paragraph"></p>
+        </article>
+        <article class="section__article">
+          <h3 class="section__h3"></h3>
+          <img class="section__image section__image--units" />
+          <p class="section__paragraph"></p>
+          <button class="section__button section__button--knight"></button>
+          <p class="section__paragraph"></p>
+          <p class="section__paragraph"></p>
+        </article>
+        <article class="section__article">
+          <h3 class="section__h3"></h3>
+          <img class="section__image section__image--units" />
+          <p class="section__paragraph"></p>
+          <button class="section__button section__button--paladin"></button>
+          <p class="section__paragraph"></p>
+          <p class="section__paragraph"></p>
+        </article>
+        <article class="section__article">
+          <h3 class="section__h3"></h3>
+          <img class="section__image section__image--units" />
+          <p class="section__paragraph"></p>
+          <button class="section__button section__button--dragon"></button>
+          <p class="section__paragraph"></p>
+          <p class="section__paragraph"></p>
+        </article>
+      </section>
+      <section class="section section--upgrades">
+        <h2 class="section__h2"></h2>
+        <div class="section__container section__container--upgrades">
+          <div class="section__tile"></div>
+          <div class="section__tile"></div>
+          <div class="section__tile"></div>
+          <div class="section__tile"></div>
+          <div class="section__tile"></div>
+          <div class="section__tile"></div>
+          <div class="section__tile"></div>
+          <div class="section__tile"></div>
+          <div class="section__tile"></div>
+          <div class="section__tile"></div>
+          <div class="section__tile"></div>
+          <div class="section__tile"></div>
+          <div class="section__tile"></div>
+          <div class="section__tile"></div>
+          <div class="section__tile"></div>
+          <div class="section__tile"></div>
+          <div class="section__tile"></div>
+          <div class="section__tile"></div>
+          <div class="section__tile"></div>
+          <div class="section__tile"></div>
+          <div class="section__tile"></div>
+          <div class="section__tile"></div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
