city bugfix, gold per second counter, functions exported to modules

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -33,6 +33,7 @@
       </div>
       <p class="section__paragraph counter counter--gold">0</p>
       <h3 class="section__h3">Gold</h3>
+      <p class="section__paragraph">Gold Per Second: <span class="counter--gold-per-second">0</span></p>
     </section>
     <section class="section section--city">
       <h2 class="section__h2 section__h2--city">Your City</h2>
