city upgrade mechanic

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -43,8 +43,7 @@
       <div class="section__container section__container--city">
         <h3 class="section__h3">Your Military Power</h3>
         <p class="section__paragraph counter--power">0</p>
-        <button class="section__button section__button--buy section__button--city">
-         
+        <button class="section__button section__button--buy section__button--city lv1"> Upgrade City to Lv. 2
         </button>
         <p class="section__paragraph section__paragraph--city">
           Required: </br><span class="price--city"></span> Gold <span class="power--city"></span> Military Power
@@ -118,7 +117,7 @@
         <p class="section__paragraph section__paragraph--description">Those holy warriors rend through your enemies with
           the power of god on their swords, they are most respected units in your empires, so people are most likely to
           pay for their holy crusade.
-          <span class="section__paragraph section__paragraph--special"> Gold per second: 25 </br> Military Power: 30 </br> Your peasants earn +2 gold per second for each 5 paladins you have </span>
+          <span class="section__paragraph section__paragraph--special"> Gold per second: 25 </br> Military Power: 30 </br> Your peasants earn +1 gold per second for each 2 paladins you have </span>
         </p>
       </article>
       <article class="section__article">
