publish wothout upgrades

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -26,6 +26,7 @@
     </header>
     <section class="section section--clicker">
       <h2 class="section__h2">Gold Generator</h2>
+      <audio src="../../public/mainTheme.mp3" controls loop></audio>
       <div class="section__coin section__coin--js">
         <img src="../assets/img/coin.png" class="section__coin-image" />
         <button class="section__button section__button--clicker">
